# OpenH264Recorder

./: .gitignore  LICENSE  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/me/skonb/openh264cameraview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BufferedData.h  CameraEncoder.cpp  CameraEncoder.h  Encoder.h  YUV.h  aac-enc.c  exports.cpp  exports.h  native-lib.cpp
app/src/main/cpp/android_aac_enc/: CMakeLists.txt
app/src/main/cpp/android_aac_enc/src/: aacenc.c  aacenc_core.c
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/java/com/todoroo/aacenc/: AACEncoder.java
app/src/main/java/me/skonb/openh264cameraview/: AACConcatenator.kt  AACRecorder.kt  CameraRecordActivity.kt  ErrorDialogHelper.kt  H264Concatenator.kt  H264Encoder.kt  H264Recorder.kt  MP4Concatenator.kt  MP4Recorder.kt  MainActivity.kt  ProgressDialogHelper.kt  SurfaceRecordActivity.kt  VideoData.kt
app/src/main/res/layout/: activity_camera_record.xml  activity_main.xml  activity_surface_record.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/me/skonb/openh264cameraview/: ExampleUnitTest.java
